@@ -2,15 +2,15 @@ package com.mangomelancholy.mangoai.application.conversation;
 
 import com.mangomelancholy.mangoai.application.conversation.repository.ConversationRecord;
 import com.mangomelancholy.mangoai.application.conversation.repository.ExpressionRecord;
-import java.util.Collections;
 import java.util.List;
 
 public class ConversationEntity {
 
-  public ConversationEntity(final ExpressionValue userExpressionValue) {
-    assert userExpressionValue != null;
+  public ConversationEntity(final ExpressionValue systemSeed, final ExpressionValue palGreeting) {
+    assert systemSeed != null;
+    assert palGreeting != null;
 
-    expressionValues = Collections.singletonList(userExpressionValue);
+    expressionValues = List.of(systemSeed, palGreeting);
     conversationId = null;
   }
 
@@ -25,14 +25,6 @@ public class ConversationEntity {
   private final List<ExpressionValue> expressionValues;
   private final String conversationId;
 
-
-  String getConversationId() {
-    return conversationId;
-  }
-  ExpressionValue getLastExpression() {
-    return expressionValues.get(0);
-  }
-
   public ConversationRecord toRecord() {
     final List<ExpressionRecord> expressionRecords = expressionValues.stream().map(ExpressionValue::toRecord).toList();
     return new ConversationRecord(conversationId, expressionRecords);
@@ -41,6 +33,13 @@ public class ConversationEntity {
   public static ConversationEntity fromRecord(final ConversationRecord conversationRecord) {
     final List<ExpressionValue> expressionValues = conversationRecord.expressions().stream().map(ExpressionValue::fromRecord).toList();
     return new ConversationEntity(conversationRecord.conversationId(), expressionValues);
+  }
+
+  public String getConversationId() {
+    return conversationId;
+  }
+  public ExpressionValue getLastExpression() {
+    return expressionValues.get(expressionValues.size() - 1);
   }
 
 }
